# Qt_Lora

./: CMakeLists.txt  Main.qml  main.cpp
Qml_Folder/: Drawer_Custom.qml  Header_GUI.qml  Socket_GUI.qml
